--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server && node server.js",
+    "start:server": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,11 +22,18 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "css-loader": "^1.0.1",
+    "express": "^4.16.4",
     "google-maps-react": "^2.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "reactstrap": "^6.5.0",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
-  }
+  },
+  "proxy": "http://localhost:3002/"
 }
