--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server && node server.js",
-    "start:server": "node server.js"
+    "start": "webpack-dev-server && node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +12,9 @@
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "webpack": "^4.25.1"
-  },
-  "devDependencies": {
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.5",
     "@babel/polyfill": "^7.0.0",
@@ -31,9 +30,10 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "reactstrap": "^6.5.0",
-    "style-loader": "^0.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "style-loader": "^0.23.1"
+  },
+  "devDependencies": {
+
   },
   "proxy": "http://localhost:3002/"
 }
