--- a/package.json
+++ b/package.json
@@ -21,21 +21,24 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "fs": "^0.0.1-security",
     "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-twitter-embed": "^2.0.4",
+    "react-twitter-widgets": "^1.7.1",
     "reactstrap": "^6.5.0",
     "style-loader": "^0.23.1",
+    "twitter": "^1.7.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
