--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "fs": "^0.0.1-security",
-    "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-google-maps": "^9.4.5",
     "react-twitter-embed": "^2.0.4",
     "react-twitter-widgets": "^1.7.1",
     "reactstrap": "^6.5.0",
