--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -28,6 +29,7 @@
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
     "react-google-maps": "^9.4.5",
     "react-twitter-embed": "^2.0.4",
